--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "rm -rf lib && tsc --build tsconfig.app.json",
     "test": "jest"
   },
-  "author": "yourname",
+  "author": "yujinpan",
   "devDependencies": {
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.23",
