remove path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "resolveJsonModule": true
   },
-  "references": [
-    {"path": "./tsconfig.spec.json"}
-  ]
+  "references": [{ "path": "./tsconfig.spec.json" }]
 }
