--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lib",
     "bin"
   ],
+  "bin": {
+    "node-base": "bin/node-base.js"
+  },
   "scripts": {
     "publish:beta": "npm version prerelease --preid=beta && npm publish",
     "publish:patch": "npm version patch && npm publish",
