--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "node-base",
   "version": "1.0.0",
   "description": "node-base description.",
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/es/index.js",
+  "types": "types/index.d.ts",
   "files": [
     "lib",
-    "bin"
+    "bin",
+    "types"
   ],
   "bin": {
     "node-base": "bin/node-base.js"
@@ -15,7 +18,7 @@
     "publish:patch": "npm version patch && npm publish",
     "version": "npm run build",
     "postversion": "git push --all && git push --tags",
-    "build": "rm -rf lib && tsc --build tsconfig.app.json && node scripts/patchCJS.js",
+    "build": "rollupx",
     "test": "jest"
   },
   "author": "yujinpan",
@@ -31,6 +34,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.0.3",
     "prettier": "^2.7.1",
+    "rollupx": "^2.0.31",
     "ts-jest": "^29.0.2",
     "typescript": "^4.8.3"
   },
