--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "version": "npm run build",
     "postversion": "git push --all && git push --tags",
     "build": "rollupx",
-    "test": "jest"
+    "test": "jest",
+    "docs:dev": "vitepress dev .",
+    "docs:build": "vitepress build ."
   },
   "author": "yujinpan",
   "devDependencies": {
@@ -36,7 +38,8 @@
     "prettier": "^2.7.1",
     "rollupx": "^3.1.1",
     "ts-jest": "^29.0.2",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "vitepress": "^1.0.0-alpha.74"
   },
   "bugs": {
     "url": "https://github.com/yujinpan/node-base/issues"
